--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0-beta3",
     "rxjs": "~6.5.4",
+    "swiper": "^6.5.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
