--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.12",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0-beta3",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.5.4",
     "swiper": "^6.5.7",
     "tslib": "^1.10.0",
